--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
   <style>
     body{
       background-color: black;
-
+min-height: 100vh;;
     }
     table,tr,td,th{
       border:1px solid white;
@@ -47,7 +47,7 @@
       overflow-x: hidden;
       margin-left:auto;
       margin-right:auto; 
-      padding:1px;
+      padding:3px;
       width:80%;
     }
     .card{
